@@ -1,5 +1,9 @@
 2005-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* Format, Search and Help menus bug-fixed.
+
+2005-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* Preferences dialog works.
 
 2005-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>
